2004-05-12  Ian Zimmerman  <itz@californiadigital.com>

	* fish/extensions/sensors.scm (sensors-main): use string-tokenize
	to split sensors list, not read.

	* doc/sensors.1: Document the new --all flag.  Should
	this file be generated through make?  

	* fish/extensions/sensors.scm (sensors-main): Add an --all flag
	as requested by Al to override ignore list.
	(sensors-display-help): Document the new --all flag.

2004-05-11  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_wrappers.h: Fix #include bug found by
	Ian.

	* ipmipower/src/ipmipower_config.c: Remove _GNU_SOURCE define.

	* bmc-watchdog/bmc-watchdog: Set default use to SMS/OS and clear
	all flags in default daemon execution.

	* doc/bmc-watchdog.8.in: Added known issue about using something
	other than SMS/OS for the bmc watchdog timer use.
	
2004-05-11  Albert Chu <chu11@llnl.gov>

	Added ipmipower.
	
	* COPYING.ipmipower, DISCLAIMER.ipmipower, doc/ipmipower.8.in,
	doc/ipmipower.conf.5.in, ipmipower/Makefile.am,
	ipmipower/src/Makefile.am, ipmipower/src/argv.c,
	ipmipower/src/argv.h, ipmipower/src/cbuf.c, ipmipower/src/cbuf.h,
	ipmipower/src/conffile.c, ipmipower/src/conffile.h,
	ipmipower/src/error.c, ipmipower/src/error.h, ipmipower/src/fd.c,
	ipmipower/src/fd.h, ipmipower/src/hostlist.c,
	ipmipower/src/hostlist.h, ipmipower/src/hprintf.c,
	ipmipower/src/hprintf.h, ipmipower/src/ipmipower_auth.c,
	ipmipower/src/ipmipower_auth.h, ipmipower/src/ipmipower.c,
	ipmipower/src/ipmipower_check.c, ipmipower/src/ipmipower_check.h,
	ipmipower/src/ipmipower_config.c,
	ipmipower/src/ipmipower_config.h,
	ipmipower/src/ipmipower_connection.c,
	ipmipower/src/ipmipower_connection.h, ipmipower/src/ipmipower.h,
	ipmipower/src/ipmipower_output.c,
	ipmipower/src/ipmipower_output.h,
	ipmipower/src/ipmipower_packet.c,
	ipmipower/src/ipmipower_packet.h, ipmipower/src/ipmipower_ping.c,
	ipmipower/src/ipmipower_ping.h,
	ipmipower/src/ipmipower_powercmd.c,
	ipmipower/src/ipmipower_powercmd.h,